substrate/frame/support/test/tests/pallet_ui/error_wrong_item.stderr
error: Invalid pallet::error, expected item enum
  --> tests/pallet_ui/error_wrong_item.rs:36:2
   |
36 |     pub struct Foo;
   |     ^^^
